Fixed the problem with my name on small screen

--- a/css/styles.css
+++ b/css/styles.css
@@ -23,7 +23,7 @@
 }
 
 #intro {
-    background: url("../img/background-test.png") no-repeat center fixed;
+    background: url("../img/background-test.png") no-repeat center;
 }
 
 .vertical-center {
@@ -52,6 +52,10 @@
     background-color: transparent;
     border-color: transparent;
 
+}
+
+.navbar-default .navbar-toggle .icon-bar {
+    background-color: #FFF;
 }
 
 .navbar-default .navbar-nav > li > a {
@@ -167,17 +171,27 @@ h1 {
     margin-left: 15px;
 }
 
+.test-vertical-center {
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
 @media (min-width: 1200px) {
     .container-grey-section {
         width: 100%;
         height: 100%;
-
     }
 
     .container-white-section {
         width: 100%;
         height: 100%;
+    }
+}
 
+@media (max-width: 1200px) {
+    .test-vertical-center {
+        transform: translateY(0%);
     }
 
 }
@@ -189,12 +203,6 @@ h1 {
 .navbar-default .navbar-nav > .active > a {
     color: #FFF;
     /*background-color: #000;*/
-}
-
-.test-vertical-center {
-    position: relative;
-    top: 50%;
-    transform: translateY(-50%);
 }
 
 .panel-heading > h4 > a:hover {
